added top-bar, about and css

--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>my club's space</title>
 </head>
 <body>
-    <div class="">
+    <div class="top-bar">
         <h1>myclubs.space</h1>
+        <div class="top-bar-right">
+            <a href="#about">what's this?</a>
+            <a href="#why">why?</a>
+            <a href="#get-started">get started</a>
+        </div>
     </div>
-
+    <div class="main-content" id="about">
+            <h2>welcome to myclubs.space! (my club's space)</h2>
+            <h3>this is basically a subdomain service for your <a href="https://hackclub.com"></a>hack club</a> that let's you host your club's website!</h3>
+            <p>it's free to use, opensource and community ran (note: current maintainer <a href="https://lynn.pt/">(lynn)</a> works at hack club)</p>
+            <p>hosted in france, on OVHCloud and follows all gdpr rules (we have a privacy policy btw :P)</p>
+        </div>
+    </div>
 </body>
 </html>
