--- a/index.html
+++ b/index.html
@@ -12,15 +12,33 @@
         <div class="top-bar-right">
             <a href="#about">what's this?</a>
             <a href="#why">why?</a>
+            <a href="#price">pricing</a>
             <a href="#get-started">get started</a>
         </div>
     </div>
     <div class="main-content" id="about">
-            <h2>welcome to myclubs.space! (my club's space)</h2>
-            <h3>this is basically a subdomain service for your <a href="https://hackclub.com"></a>hack club</a> that let's you host your club's website!</h3>
-            <p>it's free to use, opensource and community ran (note: current maintainer <a href="https://lynn.pt/">(lynn)</a> works at hack club)</p>
-            <p>hosted in france, on OVHCloud and follows all gdpr rules (we have a privacy policy btw :P)</p>
-        </div>
+        <h2>welcome to myclubs.space! (my club's space)</h2>
+        <h3>this is basically a subdomain "service" for your <a href="https://hackclub.com"></a>hack club</a> that let's you host your club's website!</h3>
+        <p>it's free to use, opensource and community ran (note: current maintainer <a href="https://lynn.pt/">(lynn)</a> works at hack club)</p>
+        <p>hosted in france, on OVHCloud and follows all gdpr rules (we have a privacy policy btw :P)</p>
+    </div>
+    <div id="why">
+        <h2>ok, nice idea, but why?</h2>
+        <p>honestly, i love dino.icu, but a few more subdomain options dedicated for clubs would be nice, wouldn't it? and making it easier for club leaders to get their websites up and running too!</p>
+        <p>also, we got some nice features!</p>
+        <ul>
+            <li>easy to sign up</li>
+            <li>no downtime (99.9%)</li>
+            <li>multiple subdomain options:</li>
+                <ul>
+                    <li>schoolhack.club</li>
+                    <li>onlinehack.club</li>
+                    <li>hackclub.website</li>
+                </ul>
+            <li>works with most HTML+CSS+JS websites, React, Astro, Next.js, etc.</li>
+        </ul>
+        <p>there's so many more features, that i can't put on here.</p>
+        
     </div>
 </body>
 </html>
