--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 </ul>
             <li>works with most HTML+CSS+JS websites, React, Astro, Next.js, etc.</li>
         </ul>
-        <p>there's so many more features, that i can't put on here.</p>
-        
+        <p>there's so many more features, that i geniunely can't list them all</p>
+
     </div>
 </body>
 </html>
