css is weird :bleh:

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
             <li>works with most HTML+CSS+JS websites, React, Astro, Next.js, etc.</li>
         </ul>
         <p>there's so many more features, that i geniunely can't list them all</p>
-
+    </div>
+    <div id="price">
+        <h2>how much does this cost?</h2>
+        <p><strong>nothing.</strong>this is all ran based on donations. </p>
     </div>
 </body>
 </html>
