added donation link and uhh something else i forgot

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div id="price">
         <h2>how much does this cost?</h2>
-        <p><strong>nothing.</strong>this is all ran based on donations. </p>
+        <p><strong>nothing.</strong> this is all ran based on donations. if you got a bit of extra cash, and want to support this project, please do by checking out <a href="https://donate.fonz.pt/">my donation page</a></p>
     </div>
 </body>
 </html>
