--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" hred="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <title>my club's space</title>
 </head>
 <body>
@@ -13,14 +16,14 @@
             <a href="#about">what's this?</a>
             <a href="#why">why?</a>
             <a href="#price">pricing</a>
-            <a href="#get-started">get started</a>
+            <a href="https://Dash">get started</a>
         </div>
     </div>
     <div class="main-content" id="about">
         <h2>welcome to myclubs.space! (my club's space)</h2>
         <h3>this is basically a subdomain "service" for your <a href="https://hackclub.com"></a>hack club</a> that let's you host your club's website!</h3>
         <p>it's free to use, opensource and community ran (note: current maintainer <a href="https://lynn.pt/">(lynn)</a> works at hack club)</p>
-        <p>hosted in france, on OVHCloud and follows all gdpr rules (we have a privacy policy btw :P)</p>
+        <p>managed in europe!</p>
     </div>
     <div id="why">
         <h2>ok, nice idea, but why?</h2>
@@ -41,7 +44,11 @@
     </div>
     <div id="price">
         <h2>how much does this cost?</h2>
-        <p><strong>nothing.</strong> this is all ran based on donations. if you got a bit of extra cash, and want to support this project, please do by checking out <a href="https://donate.fonz.pt/">my donation page</a></p>
+        <p><strong>nothing.</strong> this is all ran based on donations. if you got a bit of extra cash, and want to support this project, please do by checking out <a href="https://donate.fonz.pt/">my donation page</a>. i pay for all the hosting myself and domains.</p>
+    </div>
+    <div id="get-started">
+        <h2>how can i get started?</h2>
+        <p>i've tried to make this as easy as possible! it's geniunely extremely easy to get started.</p>
     </div>
 </body>
 </html>
