forgot the get started link :pf:

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="#about">what's this?</a>
             <a href="#why">why?</a>
             <a href="#price">pricing</a>
-            <a href="https://Dash">get started</a>
+            <a href="https://dash.myclubs.space/">get started</a>
         </div>
     </div>
     <div class="main-content" id="about">
