uhhh i forgot what i did tbh

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>welcome to myclubs.space! (my club's space)</h2>
         <h3>this is basically a subdomain "service" for your <a href="https://hackclub.com"></a>hack club</a> that let's you host your club's website!</h3>
         <p>it's free to use, opensource and community ran (note: current maintainer <a href="https://lynn.pt/">(lynn)</a> works at hack club)</p>
-        <p>managed in europe!</p>
+        <p>it's managed in europe :D, your club's website gets it's own docker container, it's awesome :D</p>
     </div>
     <div id="why">
         <h2>ok, nice idea, but why?</h2>
@@ -31,12 +31,13 @@
         <p>also, we got some nice features!</p>
         <ul>
             <li>easy to sign up</li>
-            <li>no downtime (99.9%)</li>
+            <li>no downtime, monitored (99.9%)</li>
             <li>multiple subdomain options:</li>
                 <ul>
                     <li>schoolhack.club</li>
                     <li>onlinehack.club</li>
                     <li>hackclub.website</li>
+                    <li>hshack.club</li>
                 </ul>
             <li>works with most HTML+CSS+JS websites, React, Astro, Next.js, etc.</li>
         </ul>
@@ -49,6 +50,9 @@
     <div id="get-started">
         <h2>how can i get started?</h2>
         <p>i've tried to make this as easy as possible! it's geniunely extremely easy to get started.</p>
+        <form action="https://dash.myclubs.space/">
+            <button type="submit">dashboard</button>
+        </form>
     </div>
 </body>
 </html>
