fixed go back, changed up the menu and styles for donate page

--- a/donate.html
+++ b/donate.html
@@ -13,7 +13,7 @@
         <div class="top-bar">
             <h1>myclubs.space</h1>
             <div class="top-bar-right">
-                <a href="https://myclubs.space/">< go back</a>
+                <a href="/index.html">< go back</a>
             </div>
         </div>
         <div class="main-content" id="intro">
