--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
     <div class="top-bar">
         <h1>myclubs.space</h1>
         <div class="top-bar-right">
-            <a href="#about">what's this?</a>
-            <a href="#why">why?</a>
-            <a href="#price">pricing</a>
-            <a href="https://dash.myclubs.space/">get started</a>
-        </div>
+            <a href="/donate.html">donate</a>
+            <a href="https://dash.myclubs.space/">dashboard</a>
     </div>
     <div class="main-content" id="about">
         <h2>welcome to myclubs.space! (my club's space)</h2>
@@ -53,6 +50,9 @@
         <form action="https://dash.myclubs.space/">
             <button type="submit">dashboard</button>
         </form>
+    </div>
+    <div id="footer">
+        
     </div>
 </body>
 </html>
