page broke, had to use AI to debug ts (idk what happened)

--- a/donate.html
+++ b/donate.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8"
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <link rel="preconnect" hred="https://fonzts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0.14..32,100..900;1,14..32,100..900;1,14..32,100&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
         <title>my club's space - donate!</title>
     </head>
     <body>
         <div class="top-bar">
             <h1>myclubs.space</h1>
             <div class="top-bar-right">
-                <a href="/index.html">< go back</a>
+                <a href="/index.html">&lt; go back</a>
             </div>
         </div>
         <div class="main-content" id="intro">
