--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" hred="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <title>my club's space</title>
@@ -15,10 +15,11 @@
         <div class="top-bar-right">
             <a href="/donate.html">donate</a>
             <a href="https://dash.myclubs.space/">dashboard</a>
+        </div>
     </div>
     <div class="main-content" id="about">
         <h2>welcome to myclubs.space! (my club's space)</h2>
-        <h3>this is basically a subdomain "service" for your <a href="https://hackclub.com"></a>hack club</a> that let's you host your club's website!</h3>
+        <h3>this is basically a subdomain "service" for your <a href="https://hackclub.com">hack club</a> that let's you host your club's website!</h3>
         <p>it's free to use, opensource and community ran (note: current maintainer <a href="https://lynn.pt/">(lynn)</a> works at hack club)</p>
         <p>it's managed in europe :D, your club's website gets it's own docker container, it's awesome :D</p>
     </div>
@@ -50,9 +51,6 @@
         <form action="https://dash.myclubs.space/">
             <button type="submit">dashboard</button>
         </form>
-    </div>
-    <div id="footer">
-        
     </div>
 </body>
 </html>
