--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <li>hshack.club</li>
                 </ul>
             <li>works with most HTML+CSS+JS websites, React, Astro, Next.js, etc.</li>
+            <li>possibly sometime soon, free email!</li>
         </ul>
         <p>there's so many more features, that i geniunely can't list them all</p>
     </div>
