still trying to fix the issue...

--- a/news.html
+++ b/news.html
@@ -6,8 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/marked.min.js"></script>
+    <script src="blog.js"></script>
     <title>my club's space</title>
-</html>
 <body>
     <div class="top-bar">
         <h1>myclubs.space</h1>
@@ -22,8 +23,8 @@
     <nav id="posts">
         <a href="?post=test">test</a>
     </nav>
-    
-    <article id="content">loading, please wait :3</article>
-
-    <script src="blog.js"></script>
+    <div id="post">
+        <article id="content">loading, wait pls :3</article>
+    </div>
 </body>
+</html>
