--- a/news.html
+++ b/news.html
@@ -6,8 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/marked.min.js"></script>
-    <script src="blog.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/lib/marked.umd.js"></script>
     <title>my club's space</title>
 <body>
     <div class="top-bar">
@@ -21,10 +20,16 @@
         <p>silly little blog for those that wanna read!</p>
     </div>
     <nav id="posts">
+        <h3>blog posts:</h3>
         <a href="?post=test">test</a>
     </nav>
+
+    <hr>
+
     <div id="post">
         <article id="content">loading, wait pls :3</article>
     </div>
+
+    <script src="blog.js"></script>
 </body>
 </html>
