--- a/index.html
+++ b/index.html
@@ -53,5 +53,8 @@
             <button type="submit">dashboard</button>
         </form>
     </div>
+    <div id="footer">
+        <p>made by <a href="https://lynn.pt">lynn</a> with love, for all club leaders across the world :3</p>
+    </div>
 </body>
 </html>
