--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <div id="price">
         <h2>how much does this cost?</h2>
-        <p><strong>nothing.</strong> this is all ran based on donations. if you got a bit of extra cash, and want to support this project, please do by checking out <a href="https://donate.fonz.pt/">my donation page</a>. i pay for all the hosting myself and domains.</p>
+        <p><strong>nothing.</strong> this is all ran based on donations. if you got a bit of extra cash, and want to support this project, please do by checking out <a href="/donate.html">my donation page</a>. i pay for all the hosting myself and domains.</p>
     </div>
     <div id="get-started">
         <h2>how can i get started?</h2>
