--- a/news.html
+++ b/news.html
@@ -21,7 +21,7 @@
     </div>
     <nav id="posts">
         <h3>blog posts:</h3>
-        <a href="?post=test">test</a>
+        <a href="?post=welcome">test</a>
     </nav>
 
     <hr>
