--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="top-bar">
         <h1>myclubs.space</h1>
         <div class="top-bar-right">
+            <a href="/news.html">news</a>
             <a href="/donate.html">donate</a>
             <a href="https://dash.myclubs.space/">dashboard</a>
         </div>
