i forgot to do commits... sorry

--- a/index.html
+++ b/index.html
@@ -11,51 +11,49 @@
 </head>
 <body>
     <div class="top-bar">
-        <h1>myclubs.space</h1>
+        <h1>lynn beato</h1>
         <div class="top-bar-right">
-            <a href="/news.html">news</a>
-            <a href="/donate.html">donate</a>
-            <a href="https://dash.myclubs.space/">dashboard</a>
+            <a href="/news.html">blog</a>
+            <a href="https://hackclub.com/">hack club</a>
         </div>
     </div>
     <div class="main-content" id="about">
-        <h2>welcome to myclubs.space! (my club's space)</h2>
-        <h3>this is basically a subdomain "service" for your <a href="https://hackclub.com">hack club</a> that let's you host your club's website!</h3>
-        <p>it's free to use, opensource and community ran (note: current maintainer <a href="https://lynn.pt/">(lynn)</a> works at hack club)</p>
-        <p>it's managed in europe :D, your club's website gets it's own docker container, it's awesome :D</p>
+        <img id="pfp" src="https://avatars.slack-edge.com/2025-09-23/9570178395926_97182780213ae523d3eb_512.png" width="100" height="100">
+        <h1>👋 hi there, i'm lynn!</h2>
+        <h3>i do club operations and engineering at <a href="https://hackclub.com/">hack club</a> and study i guess</h3>
+        <p>i also do some videography and photography sometimes!</p>
+        <iframe src="https://github-readme-stats.vercel.app/api?username=whatbeato&theme=dark&show_icons=true" width="467" height="195"></iframe>
     </div>
-    <div id="why">
-        <h2>ok, nice idea, but why?</h2>
-        <p>honestly, i love dino.icu, but a few more subdomain options dedicated for clubs would be nice, wouldn't it? and making it easier for club leaders to get their websites up and running too!</p>
-        <p>also, we got some nice features!</p>
-        <ul>
-            <li>easy to sign up</li>
-            <li>no downtime, monitored (99.9%)</li>
-            <li>multiple subdomain options:</li>
-                <ul>
-                    <li>schoolhack.club</li>
-                    <li>onlinehack.club</li>
-                    <li>hackclub.website</li>
-                    <li>hshack.club</li>
-                </ul>
-            <li>works with most HTML+CSS+JS websites, React, Astro, Next.js, etc.</li>
-            <li>possibly sometime soon, free email!</li>
-        </ul>
-        <p>there's so many more features, that i geniunely can't list them all</p>
+    <hr>
+    <h1>my work!</h1>
+    <div>
+        <div id="relation">
+            <img src="https://assets.hackclub.com/icon-progress-rounded.svg" width="40" height="40">
+            <h3>hack club related</h3>
+        </div>
+        <div id="card">
+            <h2>club operations and engineering at hack club!</h2>
+            <p>i do some stuff over at hack club, a non-profit based in shelburne that helps over 50k+ teenagers learn how to code and just make cool shit :D</p>
+            <p>they've helped me out through a lot, i'm really happy to be a part of the community and being able to work there.</p>
+        </div>
+        <div>
+        <div id="card">
+            <h2>2025 summer intern/volunteer!</h2>
+            <p>on june 2025, i travelled to burlington, vt from lisbon, portugal to go to hack club hq and volunteer for 1 month, and it was the best month of my life. knowing that this non-profit would invite me and pay for my flight and stuff was so surprising and i couldn't be more thankful!</p>
+            <p>i met a ton new people, and that was awesome. yet again, thank you hack club <3</p>
+        </div>
+        <div id="card">
+            <h2>events - scrapyard lisbon and daydream dc</h2>
+            <p>i was the lead organizer for scrapyard lisbon and a co-organizer for daydream dc</p>
+            <p>scrapyard lisbon was my first hackathon ever, and it was the first hackathon i have also ever organized. it was one of the most magical experiences i've ever had and it was rlly fun :D (thanks glória, raul, almeida, miguel, ayo, ivan and the rest of the orgs and team :3)</p>
+            <p>i was the co-organizer for daydream dc and i travelled to dc to attend and help out! it was also really fun even though it was short! (thanks ivie, hana, micha, kayla, niko and all the attendees and co-orgs!)</p>
+        </div>
+        <p>i also do other work more related to my school, if you would like to learn more about that, hmu!</p>
+        <hr>
     </div>
-    <div id="price">
-        <h2>how much does this cost?</h2>
-        <p><strong>nothing.</strong> this is all ran based on donations. if you got a bit of extra cash, and want to support this project, please do by checking out <a href="/donate.html">my donation page</a>. i pay for all the hosting myself and domains.</p>
-    </div>
-    <div id="get-started">
-        <h2>how can i get started?</h2>
-        <p>i've tried to make this as easy as possible! it's geniunely extremely easy to get started.</p>
-        <form action="https://dash.myclubs.space/">
-            <button type="submit">dashboard</button>
-        </form>
     </div>
     <div id="footer">
-        <p>made by <a href="https://lynn.pt">lynn</a> with love, for all club leaders across the world :3</p>
+        <p>made by lynn with <a href="https://ivie.codes">love</a> :3</p>
     </div>
 </body>
 </html>
