--- a/news.html
+++ b/news.html
@@ -7,21 +7,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/marked/lib/marked.umd.js"></script>
-    <title>my club's space</title>
+    <title>lynn beato</title>
 <body>
     <div class="top-bar">
-        <h1>myclubs.space</h1>
+        <h1>lynn beato</h1>
         <div class="top-bar-right">
             <a href="/">< go back</a>
         </div>
     </div>
     <div class="main-content" id="about">
-        <h2>myclubs.space's changelog and updates!</h2>
+        <h2>my blog</h2>
         <p>silly little blog for those that wanna read!</p>
     </div>
     <nav id="posts">
+        <!-- Remember to add your posts here with the syntax like: -->
+        <!-- <a href="?post=filename">post name</a> -->
         <h3>blog posts:</h3>
-        <a href="?post=welcome">test</a>
+        <a href="?post=welcome">test</a> 
     </nav>
 
     <hr>
