last commit for the night i think

--- a/index.html
+++ b/index.html
@@ -49,7 +49,20 @@
             <p>i was the co-organizer for daydream dc and i travelled to dc to attend and help out! it was also really fun even though it was short! (thanks ivie, hana, micha, kayla, niko and all the attendees and co-orgs!)</p>
         </div>
         <p>i also do other work more related to my school, if you would like to learn more about that, hmu!</p>
-        <hr>
+    </div>
+    <hr>
+    <div>
+        <h1>my projects!</h1>
+        <div id="card">
+            <h2><a href="https://github.com/hackclub/webdev">hackclub/webdev</a></h2>
+            <p>languages used: HTML/CSS</p>
+            <p>simple website to show all current you ship, we ships that are a part of the webdev series.</p>
+        </div>
+        <div id="card">
+            <h2><a href="https://github.com/hackclub/webdev-meeting-schedule">hackclub/webdev-meeting-schedule</a></h2>
+            <p>languages used: next.js</p>
+            <p>website that shows sample meeting schedules for clubs to do the webdev series!</p>
+        </div>
     </div>
     </div>
     <div id="footer">
