--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1>lynn beato</h1>
         <div class="top-bar-right">
             <a href="/news.html">blog</a>
+            <a href="/photography.html">photography</a>
             <a href="https://hackclub.com/">hack club</a>
         </div>
     </div>
@@ -23,6 +24,14 @@
         <h3>i do club operations and engineering at <a href="https://hackclub.com/">hack club</a> and study i guess</h3>
         <p>i also do some videography and photography sometimes!</p>
         <iframe src="https://github-readme-stats.vercel.app/api?username=whatbeato&theme=dark&show_icons=true" width="467" height="195"></iframe>
+    </div>
+    <hr>
+    <div>
+        <h1>introduction!</h1>
+        <p>hi, i'm lynn! i'm a portugal-based teen that codes sometimes, organizes events (currently organizing atlânticohacks) and dabbles in some photography and videography</p>
+        <p>you've probably seen me in the hack club slack, RTP/SIC, instagram, if you somehow got my photos featured, but i'm just a silly goober to be honest</p>
+        <p>interested in hiring me? i'm not available for hire at the moment. i'm currently only doing work for hack club and myself.</p>
+
     </div>
     <hr>
     <h1>my work!</h1>
@@ -61,7 +70,23 @@
         <div id="card">
             <h2><a href="https://github.com/hackclub/webdev-meeting-schedule">hackclub/webdev-meeting-schedule</a></h2>
             <p>languages used: next.js</p>
-            <p>website that shows sample meeting schedules for clubs to do the webdev series!</p>
+            <p>website that shows sample meeting schedules for clubs to do the webdev series! it syncs to a .md file to make it easy to edit the info, and it's one of the projects i'm most proud of!</p>
+        </div>
+        <div id="card">
+            <h2><a href="https://github.com/hackclub/application-viewer">hackclub/application-viewer</a> (v2)</h2>
+            <p>languages used: next.js</p>
+            <p>i made the v2 of this, it allows us to view the applications submitted via <a href="https://github.com/hackclub/apply">hackclub/apply</a> and let's us send emails via SES.</p>
+        </div>
+        <div id="card">
+            <h2><a href="https://github.com/hackclub/toolbox">hackclub/toolbox</a> (v2)</h2>
+            <p>languages used: next.js</p>
+            <p>i refurbished the toolbox to now sync with an airtable db and redesigned it a bit. it made it easier for YSWS orgs and HQ members to add things, without PRs and just made their lives simpler!</p>
+        </div>
+    </div>
+    <div>
+        <h1>repos maintained</h1>
+        <div>
+            
         </div>
     </div>
     </div>
