--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <title>my club's space</title>
+    <title>lynn beato</title>
 </head>
 <body>
     <div class="top-bar">
@@ -85,9 +85,11 @@
     </div>
     <div>
         <h1>repos maintained</h1>
-        <div>
-            
+        <div id="card">
+            <h2><a href="https://github.com/hackclub/toolbox">hackclub/toolbox</a> (v1)</h2>
+            <p>lanugages used: <next class="js"></next></p>
         </div>
+        <p>there's more repos, but idk them all sob sob</p>
     </div>
     </div>
     <div id="footer">
