add footer to all pages and do smth else i forgor

--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
     </div>
     <div id="footer">
         <p>made by lynn with <a href="https://ivie.codes">love</a> :3</p>
+        <p>all the content listed on this website is under CC BY-NC-ND unless said otherwise.</p>
+        <p>see information about hosting <a href="/info.html">here</a></p>
     </div>
 </body>
 </html>
