--- a/photography.html
+++ b/photography.html
@@ -22,5 +22,14 @@
         <h2>i sometimes dabble in some photography and videography!</h2>
         <p>i've been featured in most portuguese broadcasters (rtp, sic, tvi, cnn portugal, cmtv, etc.) and a few popular news sites, like observador.</p>
         <p>i mostly do areal videography of fires/national disasters with my dji mini 3, and i photograph protests and marches with my canon r50. (so woke i know)</p>
+        <p>i put most of my photography content on instagram, i'll try making a local back up soon and upload it here :)</p>
+        <form action="https://instagram.com/whatbeatoo">
+            <button type="submit">instagram</button>
+        </form>
+    <div id="footer">
+        <p>made by lynn with <a href="https://ivie.codes">love</a> :3</p>
+        <p>all the content listed on this website is under CC BY-NC-ND unless said otherwise.</p>
+        <p>see information about hosting <a href="/info.html">here</a></p>
+    </div>
     </body>
 </html>
