edited index.html and photography.html to change all links to new redirect flow, also changed a bit of the message in redirect.html. next step is sanitizing the links to make sure no one gets silly smh

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <div class="top-bar-right">
             <a href="/news.html">blog</a>
             <a href="/photography.html">photography</a>
-            <a href="https://hackclub.com/">hack club</a>
+            <a href="/redirect.html?url=hackclub.com">hack club</a>
         </div>
     </div>
     <div class="main-content" id="about">
         <img id="pfp" src="https://avatars.slack-edge.com/2025-09-23/9570178395926_97182780213ae523d3eb_512.png" width="100" height="100">
         <h1>👋 hi there, i'm lynn!</h2>
-        <h3>i do club operations and engineering at <a href="https://hackclub.com/">hack club</a> and study i guess</h3>
+        <h3>i do club operations and engineering at <a href="/redirect.html?url=hackclub.com">hack club</a> and study i guess</h3>
         <p>i also do some videography and photography sometimes!</p>
         <iframe src="https://github-readme-stats.vercel.app/api?username=whatbeato&theme=dark&show_icons=true" width="467" height="195"></iframe>
     </div>
@@ -63,22 +63,22 @@
     <div>
         <h1>my projects!</h1>
         <div id="card">
-            <h2><a href="https://github.com/hackclub/webdev">hackclub/webdev</a></h2>
+            <h2><a href="/redirect.html?url=https://github.com/hackclub/webdev">hackclub/webdev</a></h2>
             <p>languages used: HTML/CSS</p>
             <p>simple website to show all current you ship, we ships that are a part of the webdev series.</p>
         </div>
         <div id="card">
-            <h2><a href="https://github.com/hackclub/webdev-meeting-schedule">hackclub/webdev-meeting-schedule</a></h2>
+            <h2><a href="/redirect.html?url=https://github.com/hackclub/webdev-meeting-schedule">hackclub/webdev-meeting-schedule</a></h2>
             <p>languages used: next.js</p>
             <p>website that shows sample meeting schedules for clubs to do the webdev series! it syncs to a .md file to make it easy to edit the info, and it's one of the projects i'm most proud of!</p>
         </div>
         <div id="card">
-            <h2><a href="https://github.com/hackclub/application-viewer">hackclub/application-viewer</a> (v2)</h2>
+            <h2><a href="/redirect.html?url=https://github.com/hackclub/application-viewer">hackclub/application-viewer</a> (v2)</h2>
             <p>languages used: next.js</p>
             <p>i made the v2 of this, it allows us to view the applications submitted via <a href="https://github.com/hackclub/apply">hackclub/apply</a> and let's us send emails via SES.</p>
         </div>
         <div id="card">
-            <h2><a href="https://github.com/hackclub/toolbox">hackclub/toolbox</a> (v2)</h2>
+            <h2><a href="/redirect.html?url=https://github.com/hackclub/toolbox">hackclub/toolbox</a> (v2)</h2>
             <p>languages used: next.js</p>
             <p>i refurbished the toolbox to now sync with an airtable db and redesigned it a bit. it made it easier for YSWS orgs and HQ members to add things, without PRs and just made their lives simpler!</p>
         </div>
@@ -86,7 +86,7 @@
     <div>
         <h1>repos maintained</h1>
         <div id="card">
-            <h2><a href="https://github.com/hackclub/toolbox">hackclub/toolbox</a> (v1)</h2>
+            <h2><a href="/redirect.html?url=https://github.com/hackclub/toolbox">hackclub/toolbox</a> (v1)</h2>
             <p>lanugages used: <next class="js"></next></p>
         </div>
         <p>there's more repos, but idk them all sob sob</p>
