--- a/redirect.html
+++ b/redirect.html
@@ -61,7 +61,7 @@
             appMessage.innerHTML = `
             you're about to be redirected to:
             <div><strong>${escapeHtml(target.href)}</strong></div>
-            <div style="margin-top:8px">if you trust this link, click continue. if ya don't, click cancel.
+            <div style="margin-top:8px">this website will have a different privacy policy then this website. if you trust this link, click continue. if ya don't, click cancel.
             `;
 
             controls.style.display = "";
