fixed hackclub.com link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="top-bar-right">
             <a href="/news.html">blog</a>
             <a href="/photography.html">photography</a>
-            <a href="/redirect.html?url=hackclub.com">hack club</a>
+            <a href="/redirect.html?url=https://hackclub.com">hack club</a>
         </div>
     </div>
     <div class="main-content" id="about">
