--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="main-content" id="about">
         <img id="pfp" src="https://avatars.slack-edge.com/2025-09-23/9570178395926_97182780213ae523d3eb_512.png" width="100" height="100">
         <h1>👋 hi there, i'm lynn!</h2>
-        <h3>i do club operations and engineering at <a href="/redirect.html?url=hackclub.com">hack club</a> and study i guess</h3>
+        <h3>i do club operations and engineering at <a href="/redirect.html?url=https://hackclub.com">hack club</a> and study i guess</h3>
         <p>i also do some videography and photography sometimes!</p>
         <iframe src="https://github-readme-stats.vercel.app/api?username=whatbeato&theme=dark&show_icons=true" width="467" height="195"></iframe>
     </div>
