--- a/photography.html
+++ b/photography.html
@@ -23,7 +23,7 @@
         <p>i've been featured in most portuguese broadcasters (rtp, sic, tvi, cnn portugal, cmtv, etc.) and a few popular news sites, like observador.</p>
         <p>i mostly do areal videography of fires/national disasters with my dji mini 3, and i photograph protests and marches with my canon r50. (so woke i know)</p>
         <p>i put most of my photography content on instagram, i'll try making a local back up soon and upload it here :)</p>
-        <form action="/redirect.html?url=https://instagram.com/whatbeatoo">
+        <form action="/redirect.html?url=https://instagram.com/whatbeatoo/">
             <button type="submit">instagram</button>
         </form>
     <div id="footer">
