idk what i did here tbh

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h1>repos maintained</h1>
         <div id="card">
             <h2><a href="/redirect.html?url=https://github.com/hackclub/toolbox">hackclub/toolbox</a> (v1)</h2>
-            <p>lanugages used: <next class="js"></next></p>
+            <p>lanugages used: next.js</p>
         </div>
         <p>there's more repos, but idk them all sob sob</p>
     </div>
