--- a/news.html
+++ b/news.html
@@ -23,7 +23,7 @@
         <!-- Remember to add your posts here with the syntax like: -->
         <!-- <a href="?post=filename">post name</a> -->
         <h3>blog posts:</h3>
-        <a href="?post=welcome">test</a> 
+        <a href="?post=welcome">welcome!</a> 
     </nav>
 
     <hr>
